[MLS] Fix a bad alignment on the admin dashboard

--- a/WebContent/assets/css/pimpmytrainee.css
+++ b/WebContent/assets/css/pimpmytrainee.css
@@ -122,12 +122,7 @@
 .metric {
 	background-color: #f7f7f9;
 	border-radius: 0.6rem;
-	display: inline-block;
-	height: 48%;
-	margin-bottom: 2rem;
-	padding: 4rem 2rem;
 	text-align: center;
-	width: 24%;
 }
 
 .value {
